Remove commented out code and fix spacing in navbar styles

--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -386,11 +386,6 @@ ul.row {
 
 /* Navbar
       ============================= */
-
-/* .navbar-menu {
-    float: right;
-} */
-
 .nav {
     display: flex;
     margin: 0;
@@ -406,7 +401,7 @@ ul.row {
     letter-spacing: var(--nav-item-letter-spacing);
 }
 
-.nav .nav-item+.nav-item {
+.nav .nav-item + .nav-item {
     margin: var(--nav-item-margin);
 
 }
